--- a/details.html
+++ b/details.html
@@ -57,7 +57,8 @@
 Welcome to Sithembile Driving School, your premier choice for safe and reliable driving education in Germiston. With over a decade of dedicated service,<br> Sithembile Driving School has been committed to providing top-notch training, using the latest luxurious cars, and employing experienced instructors to ensure<br> our students' success on the road.<br><br>
 <a href="images/b.jpeg"><img id="a" src="images/b.jpeg"></a><br>
 <br>
-
+<a href="images/mama.jpeg"><img id="a" src="images/mama.jpeg"></a><br>
+<br>
 At Sithembile Driving School, we take pride in our unmatched pass rate for all our students. Our team of instructors is not only highly qualified but also<br> deeply passionate about empowering learners to become confident and responsible drivers. Whether you're a beginner or looking to brush up on your driving<br> skills, we offer comprehensive lessons tailored to meet your individual needs.<br><br>
 <a href="images/c.jpeg"><img id="a" src="images/c.jpeg"></a><br>
 <br>
