--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				margin-right: 10px;
 			}
 			#facebook{
-				width: 20px;
+				width: 30px;
 				border-radius: 7px;
 				margin-right: 10px;
 			}
@@ -205,7 +205,7 @@
 	<nav>
 <h5>Sithembile Driving School +27 79 245 3668</h5>
 		
-	<a href="https://web.facebook.com/"><img id="facebook" src="images/facebook.jpg" target="_blank"></a>
+	<a href="https://web.facebook.com/profile.php?id=61556822535891"><img id="facebook" src="images/facebook.jpg" target="_blank"></a>
 	<ul>
 		<li><a class="active" href="index.html">Home</a></li>
 		<li><a href="details.html">About Us</a></li>
