--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
 	<title>Sithembile Driving School</title>
 	<meta name="description" content="Sithembile Drving School">
 	<meta name="keywords" content="Sithembile Drving School, code 8 , code 10, code 14, driving school near me, code 10 lessons, code 8 lessons, code 14 lessons, driving school in Germistone">
+	<head>
+    <link rel="canonical" href="https://www.sithembiledrivingschool.info">
+		<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Sithembile Driving school",
+  "name": "Sithembile Driving School",
+  "url": "https://www.sithembiledrivingschool.info",
+  "logo": "https://www.sithembiledrivingschool.info",
+  "description": "Driving school in Germistone,"
+}
+</script>
+
+</head>
+
 	<style type="text/css">
 		*{
 			padding: 0;
