--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
 			font-size: 25px;
 			margin-left: 30px;
 		}
+		li{
+			color: blue;
+		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="http://kit.fontawesome.com/a076d05399">
 </head>
