--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="google-site-verification" content="Ivz8Mm2M29fAtbFnw2fPz8NEJWsE7fiDzjo-kMlRpuw" />
 	<title>Sithembile Driving School</title>
 	<meta name="description" content="Sithembile Drving School">
 	<meta name="keywords" content="Sithembile Drving School, code 8 , code 10, code 14, driving school near me, code 10 lessons, code 8 lessons, code 14 lessons, driving school in Germistone">
