--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531257337326657"
+     crossorigin="anonymous"></script>
 	<meta name="google-site-verification" content="Ivz8Mm2M29fAtbFnw2fPz8NEJWsE7fiDzjo-kMlRpuw" />
 	<title>Sithembile Driving School</title>
 	<meta name="description" content="Sithembile Drving School">
