--- a/details.html
+++ b/details.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html>
-<head>
+<head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531257337326657"
+     crossorigin="anonymous"></script>
 	<title>Sithembile Driving School</title>
 	<meta name="description" content="Sithembile Drving School">
 	<meta name="keywords" content="Sithembile Drving School, code 8 , code 10, code 14, driving school near me, code 10 lessons, code 8 lessons, code 14 lessons, driving school in Germistone">
