--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html>
-<head>
+<head> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531257337326657"
+     crossorigin="anonymous"></script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Sithembile Driving School</title>
