--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 	 <img id="chain" src="images/c.jpeg"><h1 id="main-head"> Sithembile Driving School </h1>
 	<br>
 	<nav>
-<h5>Sithembile Driving School +27 79 245 3668</h5>
+<h5>Sithembile Driving School +27 79 245 3668 The Best Drving School In Germistone. When you want the best come to Sithembile Driving School</h5>
 		
 	<a href="https://web.facebook.com/profile.php?id=61556822535891"><img id="facebook" src="images/facebook.jpg" target="_blank"></a>
 	<ul>
