--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 			font-size: 25px;
 			margin-left: 30px;
 		}
-		li{
-			color: blue;
+		.hello{
+			color: red;
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="http://kit.fontawesome.com/a076d05399">
@@ -231,8 +231,8 @@
 	<a href="https://web.facebook.com/profile.php?id=61556822535891"><img id="facebook" src="images/facebook.jpg" target="_blank"></a>
 	<ul>
 		<li><a class="active" href="index.html">Home</a></li>
-		<li><a href="details.html">About Us</a></li>
-		<li><a href="contacts.html">Contacts</a></li>
+		<li><a class="hello" href="details.html">About Us</a></li>
+		<li><a class="hello" href="contacts.html">Contacts</a></li>
 	</ul>
 	</nav>
 	<br>
