--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
     </div>
     <ul>
       <li><a href="#hero">Home</a></li>
-      <li><a href="#about">About Us</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="details.html">About Us</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="social-links">
       <a href="https://web.facebook.com/profile.php?id=61556822535891" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -255,4 +255,5 @@
   </footer>
 </body>
 </html>
+
 
