--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,6 +33,264 @@
       width: 100%;
       background: linear-gradient(90deg, #000, #111, #000);
       display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 5%;
+      position: fixed;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      font-size: 1.5rem;
+      color: #00bfff;
+      font-weight: 700;
+    }
+
+    .logo img {
+      width: 50px;
+      border-radius: 50%;
+      margin-right: 10px;
+      border: 2px solid #00bfff;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 20px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-size: 1rem;
+      text-transform: uppercase;
+      transition: color 0.3s ease;
+    }
+
+    nav ul li a:hover {
+      color: #00bfff;
+    }
+
+    .social-links {
+      display: flex;
+      gap: 15px;
+    }
+
+    .social-links a {
+      color: #fff;
+      font-size: 1.3rem;
+      transition: transform 0.3s, color 0.3s;
+    }
+
+    .social-links a:hover {
+      transform: scale(1.2);
+      color: #00bfff;
+    }
+
+    /* Mobile menu toggle button */
+    .menu-toggle {
+      display: none;
+      font-size: 1.8rem;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    /* Hero Section */
+    .hero {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      background: url('images/a.jpeg') no-repeat center center/cover;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .hero::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.55);
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 2;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      color: #00bfff;
+      margin-bottom: 15px;
+      animation: fadeInDown 1.2s ease-in-out;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      color: #ddd;
+      margin-bottom: 25px;
+      animation: fadeInUp 1.2s ease-in-out;
+    }
+
+    .hero .cta-btn {
+      padding: 12px 25px;
+      background: #00bfff;
+      color: #fff;
+      border: none;
+      border-radius: 25px;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .hero .cta-btn:hover {
+      background: #0099cc;
+    }
+
+    /* Animated Car */
+    .car {
+      position: absolute;
+      bottom: 30px;
+      left: -200px;
+      width: 180px;
+      animation: driveAcross 10s linear infinite;
+    }
+
+    @keyframes driveAcross {
+      0% { left: -200px; transform: rotate(0deg); }
+      50% { transform: rotate(2deg); }
+      100% { left: 110%; transform: rotate(0deg); }
+    }
+
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* About Section */
+    .about {
+      padding: 100px 10%;
+      background: #111;
+      text-align: center;
+    }
+
+    .about h2 {
+      color: #00bfff;
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .about p {
+      color: #ccc;
+      font-size: 1rem;
+      max-width: 700px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+
+    /* Footer */
+    footer {
+      background: #000;
+      text-align: center;
+      padding: 20px 0;
+      color: #777;
+      border-top: 1px solid #111;
+    }
+
+    /* Mobile Styles */
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      nav ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 65px;
+        left: 0;
+        width: 100%;
+        background: #111;
+        text-align: center;
+        padding: 15px 0;
+        gap: 10px;
+        border-top: 1px solid #222;
+      }
+
+      nav ul.active {
+        display: flex;
+      }
+
+      .hero h1 {
+        font-size: 2rem;
+      }
+
+      .car {
+        width: 120px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <nav>
+    <div class="logo">
+      <img src="images/c.jpeg" alt="Logo">
+      Sithembile Driving School
+    </div>
+
+    <i class="fas fa-bars menu-toggle" onclick="toggleMenu()"></i>
+
+    <ul id="menu">
+      <li><a href="#hero">Home</a></li>
+      <li><a href="details.html">About Us</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+
+    <div class="social-links">
+      <a href="https://web.facebook.com/profile.php?id=61556822535891" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://wa.me/27792453668" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </div>
+  </nav>
+
+  <section id="hero" class="hero">
+    <div class="hero-content">
+      <h1>The Best Driving School in Germiston</h1>
+      <p>Master Code 8, 10 & 14 with Sithembile Driving School — Professional, Reliable, Affordable.</p>
+      <button class="cta-btn" onclick="location.href='#contact'">Book a Lesson</button>
+    </div>
+    <img src="images/car-character.png" class="car" alt="Animated Car">
+  </section>
+
+  <section id="about" class="about">
+    <h2>About Us</h2>
+    <p>At Sithembile Driving School, we believe that learning to drive should be safe, enjoyable, and empowering. With certified instructors and modern vehicles, we provide top-quality driving lessons for beginners and advanced learners alike. Whether you’re after Code 8, Code 10, or Code 14 — we’ll help you pass with confidence!</p>
+  </section>
+
+  <footer id="contact">
+    <p>📞 Call/WhatsApp: +27 79 245 3668 | 📍 Germiston, South Africa</p>
+    <p>© 2025 Sithembile Driving School. All rights reserved.</p>
+  </footer>
+
+  <script>
+    function toggleMenu() {
+      document.getElementById('menu').classList.toggle('active');
+    }
+  </script>
+</body>
+</html>
       justify-content: space-between;
       align-items: center;
       padding: 15px 5%;
@@ -256,6 +513,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
